# gilescope.github.io

./: .gitignore  404.html  CNAME  Gemfile  README.md  _config.yml  index.md
_posts/: 2015-06-20-Macs.md  2015-10-28-Pedal-Zurich.md  (+44 more)
_site/: 404.html  CMakeLists.txt  feed.xml  index.html
_site/2015/06/20/: Macs.html
_site/2015/10/28/: Pedal-Zurich.html
_site/2015/12/10/: Mocking-mocking.html
_site/2016/01/04/: Cache-by-Hash.html
_site/2016/01/10/: Universal-JavaScript.html
_site/2016/02/03/: Speed-of-African-Swallow.html
_site/2016/02/12/: Deployment.html
_site/2016/02/13/: Log4Net-considered-harmful.html
_site/2016/02/15/: Continuous-code-review.html
_site/2016/03/02/: Beautiful-Tests.html
_site/2016/04/10/: Central-Heating-A-Retrospective.html  Clean-Code.html
_site/2016/04/20/: Estimates.html
_site/2016/05/10/: Visual-Studio-and-C-Sharp.html
_site/2016/06/02/: TeamCity.html
_site/2016/06/17/: JavaScript.html
_site/2016/06/20/: REST.html
_site/2016/06/22/: Election.html
_site/2016/07/10/: KeyBindings.html
_site/2016/08/12/: Software-Archiology.html
_site/2016/08/24/: Feedback-Loops.html
_site/2016/09/25/: Living-with-Nuget.html
_site/2016/10/10/: Branching.html
_site/2016/10/20/: SEO.html
_site/2016/11/03/: Gaia.html
_site/2016/12/02/: State-of-the-art.html
_site/2017/04/23/: Wordpress.html
_site/about/: index.html
_site/assets/css/: style.css
_site/cryptocurrencies/2017/10/14/: The-Quickening.html
_site/jekyll/update/2017/10/15/: welcome-to-jekyll.html
_site/languages/2017/05/15/: Rust-FTW.html
